cflib/gemma depend now on the gemlib in the repository and not the globally installed gemlib. Fixed some header includes too.

--- a/RULES
+++ b/RULES
@@ -64,7 +64,8 @@ install-recursive uninstall-recursive dist-recursive:
 #
 # global CFLAGS and ASFLAGS
 #
-INCLUDES = -I$(top_srcdir)
+INCLUDES = -I$(top_srcdir)/gemlib
 DEFINITIONS = 
 CFLAGS = $(INCLUDES) $(DEFINITIONS) $(GENERAL) $(OPTS) $(WARN)
 ASFLAGS = $(INCLUDES) $(DEFINITIONS) $(GENERAL)
+LDFLAGS = -L$(top_srcdir)/gemlib
