--- a/gemma/libgemma/Makefile.objs
+++ b/gemma/libgemma/Makefile.objs
@@ -18,9 +18,9 @@ include $(top_srcdir)/PHONY
 all-here: objs
 
 # default overwrites
-INCLUDES = -I$(top_srcdir)/gemma/src
+INCLUDES = -I$(top_srcdir)/gemma/include/gemma/
 GENERAL = -mshort
-DEFINITIONS = -DFAST_YIELD
+DEFINITIONS =
 
 ifeq ($(TARGET),020)
 GENERAL += -m68020-60
