--- a/gemlib/gemlib.spec.in
+++ b/gemlib/gemlib.spec.in
@@ -6,8 +6,8 @@
 
 Summary       : GEM libraries and header files
 Name          : gemlib
-Version       : 0.42.99
-Release       : 20030323
+Version       : @VERSION@
+Release       : 1
 Copyright     : Public Domain
 Group         : Development/Libraries
 
