--- a/gemlib/mt_gem.h.in
+++ b/gemlib/mt_gem.h.in
@@ -1508,6 +1508,7 @@ void v_rvon        (VdiHdl );
 void vq_chcells    (VdiHdl , short *n_rows, short *n_cols);
 void vq_curaddress (VdiHdl , short *cur_row, short *cur_col);
 void vs_curaddress (VdiHdl , short row, short col);
+#define v_curaddress vs_curaddress
 /**@}*/
  
 
