Adjusted to be able to propagate CVS/CONFIGVARS GLOBAL variable setting.
This is usefull e.g. when you have the libc in other than default directory
on your system to specify the -I and -L paths.

--- a/cflib/Makefile.objs
+++ b/cflib/Makefile.objs
@@ -21,7 +21,7 @@ all-here: objs
 DEFINITIONS = -fwritable-strings
 
 ifeq ($(TARGET),16)
-GENERAL = -mshort
+GENERAL += -mshort
 endif
 
 # default definitions
