--- a/gemma/libgemma/Makefile.objs
+++ b/gemma/libgemma/Makefile.objs
@@ -18,7 +18,7 @@ include $(top_srcdir)/PHONY
 all-here: objs
 
 # default overwrites
-INCLUDES = -I$(top_srcdir)/gemma/include/
+INCLUDES = -I$(top_srcdir)/gemma/include/ -I$(top_srcdir)/gemlib/
 GENERAL = 
 DEFINITIONS =
 
