Fixed to link properly.

--- a/gemma/configtool/Makefile
+++ b/gemma/configtool/Makefile
@@ -24,7 +24,7 @@ GENERAL =
 
 # default definitions
 OBJS =  $(SOBJS:.s=.o) $(COBJS:.c=.o)
-LDFLAGS = -nostartfiles -nostdlib
+LDFLAGS = -nostartfiles -nostdlib -L../libgemma/
 LIBS = -lgemma -lgcc
 GENFILES = $(TARGET)
 
