Change in Makefiles and .spec file for RPM release.

--- a/gemlib/Makefile.objs
+++ b/gemlib/Makefile.objs
@@ -14,6 +14,7 @@ default: all
 include $(top_srcdir)/CONFIGVARS
 include $(top_srcdir)/RULES
 include $(top_srcdir)/PHONY
+include $(srcdir)/VERSION
 
 all-here: objs
 
